fix height, text alignment, margins

--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ header {
 .links {
     display: flex;
     list-style-type: none;
-    width: 50%;
     height: 100%;
     align-items: center;
     justify-content: space-evenly;
@@ -62,11 +61,12 @@ header img {
 }
 
 main {
-    height: 150vh;
+    height: fit-content;
     width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 2em;
 }
 
 .carousel {
@@ -88,7 +88,7 @@ main {
 .about-us .bottom {
     margin-top: 2em;
     display: flex;
-    height: 40vh;
+    height: fit-content;
     width: 100vw;
     justify-content: space-evenly;
 
@@ -137,3 +137,10 @@ form {
     background: var(--teal);
 }
 
+small {
+    text-align: center;
+}
+
+.carousel__viewport {
+    margin-bottom: 0px;
+}
